RESOLVED FIXED152974
[WK2][GTK] Propagate motion-notify-event signals from the WebView
https://bugs.webkit.org/show_bug.cgi?id=152974
Summary [WK2][GTK] Propagate motion-notify-event signals from the WebView
Mario Sanchez Prada
Reported 2016-01-11 02:34:47 PST
As it was brought up in the mailing list recently[1], there are some signals for which the default handlers in the WebView prevent them from being propagated as there is no way to know, in a multi-process model, when the WebProcess have actually processed them or not (they should be propagated when not processed). See more detailed explanation in [2]. Options proposed were, mainly, to either store the event in the UI process and re-emit later once we know the Web process has not been handled (as done for key events) or simply to return FALSE to always propagate them, which sounds like a good option for events like motion-event-notify, which do not act over any specific target (see [3] for a better explanation of the rationale behind). I discussed this with Carlos on IRC and he agrees on doing that change for motion events, so tracking that change here. [1] https://lists.webkit.org/pipermail/webkit-gtk/2016-January/002498.html [2] https://lists.webkit.org/pipermail/webkit-gtk/2016-January/002500.html [3] https://lists.webkit.org/pipermail/webkit-gtk/2016-January/002505.html
Attachments
Patch proposal (2.43 KB, patch)
2016-01-11 02:51 PST, Mario Sanchez Prada
cgarcia: review+
Mario Sanchez Prada
Comment 1 2016-01-11 02:51:23 PST
Created attachment 268681 [details] Patch proposal
WebKit Commit Bot
Comment 2 2016-01-11 02:53:57 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Mario Sanchez Prada
Comment 3 2016-01-11 03:32:28 PST
Note You need to log in before you can comment on or make changes to this bug.