[WK2][GTK] Propagate motion-notify-event signals from the WebView https://bugs.webkit.org/show_bug.cgi?id=152974

Reviewed by Carlos Garcia Campos.

Always propagate motion-notify-event signals, regardless of what the
web process does, so that we can listen for those events (which does
not act on specific targets inside the webview) from the container
widget too, and not just from the WebView itself.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseMotionNotifyEvent): Ensure the signal gets propagated.

Canonical link: https://commits.webkit.org/171052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194846 268f45cc-cd09-0410-ab3c-d52691b4dbfc